--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -43,6 +43,8 @@
     
     .contactInfo { float:left; margin-top: 40px;margin-left: 27%;}
     .contactList {margin-bottom: 10px}
+    
+    .section-form {margin-bottom: 40%;}
 }
 
 
@@ -114,7 +116,7 @@
     .works-step:last-of-type { margin-bottom: 20px; }
     
 }
-
+ .section-form {margin-bottom: 85%;}
 
 
 /* Small phones: from 0 to 480px */
